# 2427_radio

./: CMakeLists.txt  Chip_ID.cpp  LinkTest.cpp  LinkTestJ.cpp  LinkTest_Proto.cpp  Lora_rx.cpp  Lora_tx.cpp  Lora_tx_packets.cpp  README.md  SX128x_Linux.cpp  Test.cpp  link_code.py  pins.hpp  runner.cpp
